# pardus-hw

./: CMakeLists.txt  LICENSE  README.md
app/src/: backend.cpp  backend.h  hwcenter_tr.ts  main.cpp
app/src/gui/: details.qml  hwmon.qml  main.qml
daemon/: main.cpp  pardus-optimizer.conf  pardus-optimizer.service
